--- a/lab4/DataContainer/output/streamline.ipynb
+++ b/lab4/DataContainer/output/streamline.ipynb
@@ -57,7 +57,7 @@
     "# 绘制图形\n",
     "num_lines = 100\n",
     "for i in range(num_lines):\n",
-    "    linePoints = np.load(\"Euler/\" + str(i) + \".npy\")\n",
+    "    linePoints = np.load(\"Euler/stre\" + str(i) + \".npy\")\n",
     "    ax.plot(linePoints[:, 0], linePoints[:, 1], linePoints[:, 2], \"blue\")\n",
     "\n",
     "# 显示图例\n",
